# Sport_Advantages_Moderne_Data_Infrastructure

./: .env..  .env.sample  .gitignore  README.md  calculate_distance.py  cute_of_docker_compose;yaml  docker-compose.yaml  dockr-compose-second-part.yaml  fichier.yaml  pyproject.toml  without_thrift.yaml
activity_generator/: Dockerfile  requirements.txt  sport_generation.py  sport_genertion.py  sql_manipulation.py
airflow/: Dockerfile  airflow.cfg  requirements.txt
airflow/config/: bis.py  read_delta.py
airflow/dags/: data_validation_dag.py  process_data_dag.py  process_without_spark.py  rewrite_delta_dag.py  test_spark.py
airflow/logs/scheduler/: latest
commute_validation/: Dockerfile  calculate_distance.py  commute_validation.py  requirements.txt  sql_scripts.py
dags/: validation_dag.py
data/: validations_trajets.csv
data-generator/: sport-genertion.py
debezium/: create_cdc.sh  init-debezium.sh
init-scripts/: init-db.sql
monitoring/: prometheus.yml  spark-jmx-config.yaml
monitoring/postgres-exporter/: postgres_exporter.yml
monitoring/spark/: metrics.properties
postgres-config/: postgresql.conf
scripts/: calculate_distance.py  sql_scripts.py
slack_notifier/: Dockerfile  slack_notification.py
spark/: Dockerfile  SaveDelta.scala
superset/: Dockerfile  superset.db  superset_config.py
superset/docker/: docker-entrypoint.sh
superset/docker-init.d/: setup_connections.py  setup_db.sh
superset/superset_data/: superset.db
trino/: Dockerfile  entrypoint.sh  plugins.txt  setup.sh
trino/etc/: config.properties  jvm.config
(+4 files in other folders)
